--- a/assets/css/static-main.scss
+++ b/assets/css/static-main.scss
@@ -246,6 +246,6 @@ pre:focus-within code[tabindex="0"]:focus {
 .ds-c-desktop-nav .desktop-nav-items a:focus, .mobile-nav-items a:focus,
 a.ds-c-button.ds-u-margin-top--4:focus, button.accordion:focus, button.accordion:hover,
 .button p a:focus {
-    background-color: #68C1BF;
+    // background-color: #68C1BF;
     color: #212121;
 }
